# youtube-upload

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
examples/: logging_configure.py  upload_video.py  upload_videos.py  video_settings.py  youtube_video_settings.py
yt_upload/: __init__.py  channel.py  exceptions.py  typing.py  utils.py
yt_upload/components/: _YTDetailsComponent.py  _YTStudioComponent.py  _YTVisibilityComponent.py  __init__.py
yt_upload/constants/: caption_certifications.py  categories.py  comment_moderations.py  education_acamedic_systems.py  education_types.py  formats.py  indexes.py  languages.py  licenses.py  sort_by.py  visibilities.py
yt_upload/loggers/: __init__.py  _logadapter.py  _setup_logging.py  logformatter.py  logging_config.json
yt_upload/models/: __init__.py  cookies.py  video.py
yt_upload/pages/: _YTDetailsPage.py  _YTPage.py  _YTStudioPage.py  _YTVisibilityPage.py  __init__.py  times.py
yt_upload/states/: _YTDetailsStateGroup.py  _YTStudioStateGroup.py  _YTVisibilityStateGroup.py  __init__.py  base.py
